fix(collapse): increase visible for outline focus

--- a/packages/elemental-theme/src/custom-elements/ef-collapse.less
+++ b/packages/elemental-theme/src/custom-elements/ef-collapse.less
@@ -25,6 +25,7 @@
     &[focused='visible'] {
       background-color: @button-hover-background-color;
       outline: 1px solid @button-hover-border-color;
+      outline-offset: -1px;
     }
   }
 
